# p2p-storage-project

./: README.md
storage_client/: README.md  config.yaml  requirements.txt
storage_client/debian/: setup.py  validator.py
storage_client/debian/deb_dist/: ctrlz-client_1.0-1.debian.tar.xz  ctrlz-client_1.0-1.dsc  ctrlz-client_1.0-1_source.buildinfo  ctrlz-client_1.0-1_source.changes
storage_client/debian/deb_dist/ctrlz-client-1.0/: PKG-INFO  ctrlz_client.service  setup.py
storage_client/debian/protos/: data_pb2.py
storage_client/debian/website/: package.json
storage_client/debian/website/src/: cookie-policy_tpl.html  (+7 more)
storage_client/parsing/: parsing_pdf.py  parsing_texts.py  parsing_utils.py
storage_client/src/: authenticate.py  constants.py  hasher.py  main_page.py  network.py  run.py  run.spec  utils.py
storage_client/src/pages/: user_page.py
storage_client/website/: data.json  gulpfile.js
storage_client/website/scripts/: insertContent.js  utils.js
storage_client/website/src/: archivio-eventi_tpl.html  home_tpl.html  mappa-sito_tpl.html  novita-notizie_tpl.html  numeri_tpl.html  privacy_tpl.html  sezione-notizie_tpl.html
storage_p2p/: Cargo.toml  Dockerfile  README.md  build.rs  db_operation_BACKUP.md  docker-compose.yml  install_cassandra.md
storage_p2p/examples/: main.rs
storage_p2p/populate_data/: clean_db.sh  populate_db.sh
storage_p2p/protos/: data.proto
storage_p2p/src/: constants.rs  database.rs  distribution.rs  lib.rs  main.rs  protobuf.rs  query.rs  rating.rs  services.rs  signals.rs  utils.rs
storage_p2p/tests/: unit-tests.rs
(+24 files in other folders)
