[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = "0.10.1-rc"
async-std = { version = "=1.12.0", features = ["attributes", "unstable"] }
futures = "0.3.29"
log = "0.4.20"
env_logger = "0.10.0"
signal-hook = "0.3.17"
tokio = "1.35.1"
cassandra-cpp = "2.0.1"
flume = "0.11.0"
uuid = "1.6.1"
raptorq = "1.8.0"
prost = "0.12.3"
bytes = "1.5.0"
base64 = "0.21.7"
serde_json = "1.0.113"
sha2 = "0.10.8"
cron = "0.12.1"
chrono = "0.4.35"

[build-dependencies]
prost-build = "0.12.3"
tonic-build = "0.10.2"
